--- a/typeMaster.html
+++ b/typeMaster.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="./typeMaster.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./typeMaster.css">
+    <title>TYPE MASTER</title>
+</head>
+<body>
 
-    </head>
-    <body>
-        <div class="screen-div">
+    <div class="screen-div">
+        <!-- HEADER OF THE PAGE
+        =======================-->
         <header class="main-header">
             <img class="header-img" src="./assets/shared/logo.svg" alt="logo">
             <a class="buttons header-button" href="#">pre-order</a>
         </header>
+        <!-- INTRODUCTION 
+            ==============-->
         <div class="group intro">
             <h1 class="intro-h1">typemaster keyboard</h1>
             <p class="intro-p">Improve your productivity and gaming without breaking the bank. Update to a high quality mechanical typing experience</p>
@@ -18,12 +26,71 @@
                 <p>release on 5/27</p>
             </div>
         </div>
+        <!-- IMAGE ELEMENTS
+        ======================-->        
         <div class="group-img">
             <img class="keyboard keyboard-img" src="./assets/mobile/image-keyboard.jpg" alt=" ">
             <img class="keyboard phone" src="./assets/mobile/image-phone-and-keyboard.jpg" alt=" ">
             <img class="keyboard glass" src="./assets/mobile/image-glass-and-keyboard.jpg" alt=" ">
         </div>
+        
+        <!--ICON ELEMENTS
+            =============-->
+        <div class="icon-div">
+            <!--wireless-->
+            <div class="icon wireless-el">
+                <h2 class="wireless-h2">mechanical wireless keyboard</h2>
+                <p class="wireless-p">The <span class="wireless-span">typeMaster</span> keyboard boasts top-notch build and parctical design. it offers
+                a wide variety of switches and keycap, along with reliable wirelessconectivity.</p>
+            </div>
+            <!-- compatibility-->
+            <div class="icon compatibility">
+                <div class="compatibility-img">
+                    <img src="./assets/shared/icon-compatible.svg" alt="compatibility image">
+                </div>
+                <h2 class="compatibility-h2">highly compatible</h2>
+                <p class="compatibility-p">easy to use and works well with all major computer
+                    brands, gaming consoles and mobile devices, plug &play
+                    , no installation or driver deeded.
+                </p>
+            </div>
+            <!--bluetooth-->
+            <div class="icon bluetooth">
+                <div class="bluetooth-img">
+                    <img src="./assets/shared/icon-bluetooth.svg" alt="bluetooth icon">
+                </div>
+                <h2 class="bluetooth-h2">wireless with bluetooth</h2>
+                <p class="bluetooth-p">Powerful 2.4G Rf technology allows you to connect the cordless
+                    keyboard from up to 30ft away. Simply plug the unifying
+                    reciever into your computer.
+                </p>
+            </div>
+            <!--battery-->
+            <div class="icon battery">
+                <div class="battery-img">
+                    <img src="./assets/shared/icon-battery.svg" alt="battery image">
+                </div>
+                <h2 class="battery-h2">high capacity battery</h2>
+                <p class="battery-p">Equipped with a long-lasting built-in battery, you'll never have to
+                    spend a dime on replaceable ones. Enjoy 40 hours of usage time
+                    between charges.
+                </p>
+            </div>
+            <!--backlit-->
+            <div class="icon backlit">
+                <div class="backlit-img">
+                    <img src="./assets/shared/icon-light.svg" alt="backlight image">
+                </div>
+                <h2 class="backlit-h2">Rgb backlit modes</h2>
+                <p class="backlit-p">choose from 4 backlight brightness levels and adjustable
+                    breathing speed. Each key glows intensely in the dark and helps you
+                    type in low light conditions.
+                </p>
+            </div>
+        </div>
+
+        <!--PAGE FOOTER-->
         <footer class="main-footer">Type master 2021| All rights reserved</footer>
         </div>
-    </body>
+</body>
 </html>
