done with mobile design

--- a/typeMaster.html
+++ b/typeMaster.html
@@ -22,16 +22,16 @@
             <h1 class="intro-h1">typemaster keyboard</h1>
             <p class="intro-p">Improve your productivity and gaming without breaking the bank. Update to a high quality mechanical typing experience</p>
             <div class="intro-footer">
-                <button>PRE-ORDER</button>
-                <p>release on 5/27</p>
+                <button class="intro-footer-button">PRE-ORDER</button>
+                <p class="intro-footer-p">release on 5/27</p>
             </div>
         </div>
         <!-- IMAGE ELEMENTS
         ======================-->        
         <div class="group-img">
-            <img class="keyboard keyboard-img" src="./assets/mobile/image-keyboard.jpg" alt=" ">
-            <img class="keyboard phone" src="./assets/mobile/image-phone-and-keyboard.jpg" alt=" ">
-            <img class="keyboard glass" src="./assets/mobile/image-glass-and-keyboard.jpg" alt=" ">
+            <div class="keyboard keyboard-img"></div>
+            <div class="keyboard phone"></div>
+            <div class="keyboard glass"></div>
         </div>
         
         <!--ICON ELEMENTS
