--- a/typeMaster.html
+++ b/typeMaster.html
@@ -10,15 +10,10 @@
 <body>
 
     <div class="screen-div">
-        <!-- HEADER OF THE PAGE
-        =======================-->
-        <header class="main-header">
+               <header class="main-header">
             <img class="header-img" src="./assets/shared/logo.svg" alt="logo">
          <a class="buttons header-button" href="#">pre-order</a>
         </header>
-        <!-- INTRODUCTION 
-            ==============-->
-            <!-- ## intruductory paragraph-->
         <div class="introduction">
             <div class="intro-el intro"> 
                 <h1 class="intro-h1">typemaster keyboard</h1>
@@ -28,24 +23,16 @@
                     <p class="intro-footer-p">release on 5/27</p>
                 </div>
             </div>
-            <!-- ## keyboard images-->        
             <div class="intro-el keyboard keyboard-pic"></div>
             <div class="intro-el keyboard phone-pic"></div>
             <div class="intro-el keyboard glass-pic"></div>
-        
-            <!-- ## wireless-->
             <div class="intro-el wireless-el">
                 <h2 class="wireless-h2">mechanical wireless keyboard</h2>
                 <p class="wireless-p">The <span class="wireless-span">typeMaster</span> keyboard boasts top-notch build and parctical design. it offers
                 a wide variety of switches and keycap, along with reliable wirelessconectivity.</p>
             </div>
-
         </div>
-        
-        <!--ICON ELEMENTS
-            =============-->
         <div class="icon-div">
-            <!-- compatibility-->
             <div class="icon compatibility">
                 <div class="compatibility-icon">
                     <img src="./assets/shared/icon-compatible.svg" alt="compatibility image">
@@ -56,7 +43,6 @@
                     , no installation or driver deeded.
                 </p>
             </div>
-            <!--bluetooth-->
             <div class="icon bluetooth">
                 <div class="bluetooth-icon">
                     <img src="./assets/shared/icon-bluetooth.svg" alt="bluetooth icon">
@@ -67,7 +53,6 @@
                     reciever into your computer.
                 </p>
             </div>
-            <!--battery-->
             <div class="icon battery">
                 <div class="battery-icon">
                     <img src="./assets/shared/icon-battery.svg" alt="battery image">
@@ -78,7 +63,6 @@
                     between charges.
                 </p>
             </div>
-            <!--backlit-->
             <div class="icon backlit">
                 <div class="backlit-icon">
                     <img src="./assets/shared/icon-light.svg" alt="backlight image">
@@ -90,9 +74,7 @@
                 </p>
             </div>
         </div>
-
-        <!--PAGE FOOTER-->
-        <footer class="main-footer">Type master 2021| All rights reserved</footer>
+        <footer class="main-footer"> <p><strong>Typemaster 2021 </strong>| All rights reserved</p> </footer>
         </div>
 
     </div>
